--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -504,7 +504,7 @@ h2{
     width: 100%;
     height: 100%;
     display: block;
-    margin top: 0%;
+    margin-top: 0%;
     margin-left: 0%;
 }
 
