--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -363,11 +363,6 @@ h2{
 }
 
 
-
-
-
-
-
 /* Media Querys*/
 
 /* Tablet*/
@@ -507,15 +502,18 @@ h2{
     margin-top: 0%;
     margin-left: 0%;
 }
+.parrafoInfo {
+    font-size: 80%;
+}
+}
 
- 
 /*Mobile*/
 @media screen and (max-width: 600px){
  
     .nav__lista {
         background-color: rgba(21, 65, 49, 0.548);
         width: 80%;
-        height: 70vw;
+        height: 70%;
         max-width: 400px;
         transform: translateX(-100%);
         position: fixed;
@@ -547,6 +545,9 @@ h2{
      .header__titulo {
          font-size: 70px;
      }
+     .caja2index__p {
+         font-size: 80%;
+     }
     .recorte{
         overflow: hidden;
     }
@@ -565,4 +566,11 @@ h2{
     .parrafoInfo{
         text-align: center;
     }
-  
+}
+    @media screen and (max-width: 402px){
+        .icono {
+            margin-top: 2rem;
+        }
+    }
+
+
