--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -5,9 +5,9 @@
     box-sizing: border-box;
  }
 
-body {
+.body {
     background-color:bisque;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Quicksand', sans-serif; 
 }
 
 ul { list-style-type: none; }
@@ -32,28 +32,27 @@ ul { list-style-type: none; }
     align-items: center;
 }
 
-h1 {
+.h1 {
     color: bisque;
     font-family: 'Cabin Sketch', cursive;
     font-size: 50px;
     text-align: center;
     display: inline-block;
-    padding-bottom: 10px;
+    padding-bottom: 8px;
+    font-weight: bold;
+    margin-bottom: 0%;
 }
 
-h2{
+.h2{
     color: bisque;
     font-size: 30px;
     font-family: 'Oooh Baby';
+    font-weight: bold;
 }
 
-.header__titulo {
-    height: 100px;
-}
+.header__titulo {height: 100px;}
 
-.botonHamburguesa{
-    display:none;
-}
+.botonHamburguesa {display:none;}
 
 .nav__lista {
     display: flex;
@@ -79,19 +78,20 @@ h2{
     transform-origin: right;
     transition: transform 0.7s;
 }
+.nav__enlace:hover {
+    color:bisque;
+}
 
 .nav__enlace:hover::after {
     transform:scaleX(1);
     transform-origin: left;
-
 }
+
 .icono {
     color: bisque;
     font-size: 15px;
 }
-.oculto {
-    display: none;
-}
+.oculto {display: none;}
 
 #bannerinicio {
     width: 100vw;
@@ -127,6 +127,7 @@ h2{
     align-items: stretch;
     justify-items:stretch ;
 }
+
 .caja3index__img{
     width: 100%;
     height: 100%;
@@ -174,7 +175,6 @@ h2{
     "recomendaciones recomendaciones";
     grid-row-gap: 3rem;
     overflow: hidden;
-
 }
 
 .origen {
@@ -183,12 +183,14 @@ h2{
     align-items: center;
     justify-content: center;
 }
+
 .valores {
     grid-area: valores; background-color:  rgba(51, 88, 70, 0.747);
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .recomendaciones {
     grid-area: recomendaciones ; background-color: rgba(21, 65, 49, 0.548);
     display: flex;
@@ -220,16 +222,18 @@ h2{
 
 /* Tercera página - Actividades */
 
-.subtituloCentrado{
-    color: rgb(26, 68, 37);
+.subtituloCentrado{ 
+    color: rgb(12,71,36);
+    font-weight: bolder;
     text-align: center;
     text-decoration:underline;
-    font-size: 250%;
+    font-size: 220%;
+    font-family: 'Oooh Baby';
 }
 
 .bloqueactividades {
     margin-left: 2rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
     display: grid;
     grid-template-columns: 410px 410px 410px ;
     grid-template-rows: 430px 430px;
@@ -251,8 +255,8 @@ h2{
 .tarjeta:hover {
     transform: scale(1.2,1.2);
     transition: 1s;
-
 }
+
 .tarjeta__img {
     width: 100%;
     height: 80%;
@@ -266,21 +270,9 @@ h2{
     font-weight: bold;
 }
 
-/* Esto seria un carrusell*/
-.galeria__lista{
-    display: flex;
-    flex-wrap: nowrap;
-}
+.altura {height: 500px;}
 
-.galeria__contenedor {
-    width: 450px;
-    height: 400px;
-    margin-top: 2rem;
-    border: 2px solid rgba(21, 65, 49, 0.548);
-    border-radius: 20%;
-    overflow: hidden;
-}
-.galeria__img {
+.imagenCarrusel {
     width: 100%;
     height: 100%;
 }
@@ -311,12 +303,10 @@ h2{
     overflow: hidden;
 }
 
-.tituloClaro {
-    color: bisque; 
-}
+.tituloClaro {color: bisque;}
 
 .parrafoInfo {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.3;
     text-align: justify;
     padding: 1rem;
@@ -370,9 +360,7 @@ h2{
     line-height: 1.5;
 }
 
-.cajaContacto2 {
-  display: flex;
-}
+.cajaContacto2 {display: flex;}
 
 .mapa {
     display: block;
@@ -382,32 +370,33 @@ h2{
     margin-left: 1rem;
 }
 
-.parrafoInfo {
-    margin-left: 1rem;
-}
-
+.parrafoInfo {margin-left: 1rem;}
 
 /* Media Querys*/
 
 /* Tablet*/
 
 @media screen and (max-width: 1024px){
-    body {
-        height: auto;
-    }
+
+    body {height: auto;}
+    
     header {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    .header__contenedor {
-        flex-direction: column;
-    }
+    
+    .header__contenedor {flex-direction: column;}
+    
     .header__titulo{
         text-align: center;
         line-height: 40px;
         margin-bottom: 0.5rem;
+    }
+
+    .nav__lista {
+        margin-top: 1rem;
     }
 
     .caja3index {
@@ -417,17 +406,12 @@ h2{
         height: 100%;
     }
 
-    .iframeIndex {
-        height: 100%;
-    }
+    .iframeIndex { height: 100%;}
     
-    .footer {
-        flex-direction: column-reverse;
-    }
-    .footer__p {
-        font-size: 15px;
-
-    }
+    .footer { flex-direction: column-reverse;}
+    
+    .footer__p { font-size: 15px;}
+    
     .footer__lista {
         margin-bottom: 1.5rem;
         margin-top: 1rem;
@@ -458,6 +442,7 @@ h2{
        display: flex;
        flex-direction: column-reverse;
     }
+    
     .recomendaciones {
        display: flex;
        flex-direction: column; 
@@ -468,22 +453,23 @@ h2{
     height: 98vw;
     padding: 1.5rem;
     }
+    
     .bloqueactividades{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-content: center;
     }
-    .tarjeta {
-        width: 350px;
-    }
+    
+    .tarjeta { width: 350px;}
+    
     .cerro__contenedorimg {
         height: 100%;
         margin: 0% auto;
         margin-bottom: 2rem;
-        margin-top: 1rem;
-        
-    }
+        margin-top: 1rem;    
+    } 
+
     .cerrosection {
         display: flex;
         flex-direction: column;
@@ -492,46 +478,38 @@ h2{
         margin-bottom: 2rem;
     }
 
-    .imgSectionCerro {
+    .imgSectionCerro { overflow: hidden;}
+
+    .altura {height: 400px;}
+
+    .visitaVirtual { margin-left: 2.5rem;}
+    
+    .cajaContacto {width: 400px;}
+
+    .cajaContacto2 {flex-direction: column;}
+    
+    .tituloTablet { margin-bottom: 1rem;}
+   
+    .contenedorIframe {
+        width: 98%;
+        height: 60vw;
         overflow: hidden;
+        margin: 0% auto;
     }
 
-    .visitaVirtual {
-        margin-left: 2.5rem;
-    }
-    .cajaContacto {
-        width: 400px;
-       
+    .mapa {
+        width: 100%;
+        height: 100%;
+        display: block;
+        margin-top: 0%;
+        margin-left: 0%;
     }
 
-    .cajaContacto2 {
-        flex-direction: column;
-    }
-.tituloTablet {
-    margin-bottom: 1rem;
-}
-   
-.contenedorIframe {
-    width: 98%;
-    height: 60vw;
-    overflow: hidden;
-    margin: 0% auto;
-   
-}
-
-.mapa {
-    width: 100%;
-    height: 100%;
-    display: block;
-    margin-top: 0%;
-    margin-left: 0%;
-}
-.parrafoInfo {
-    font-size: 80%;
-}
+    .parrafoInfo {font-size: 80%;}
 }
 
 /*Mobile*/
+
 @media screen and (max-width: 600px){
  
     .nav__lista {
@@ -549,57 +527,44 @@ h2{
         justify-content: center;
         text-align: center;
     }
-    #menuLista:target {
-        transform: translateX(0);
-    }
-    .oculto {
-        display: inline-block;
-    }
+    
+    #menuLista:target {transform: translateX(0);}
+    
+    .oculto { display: inline-block;}
 
     .icono{
         color: bisque;
-        height: 15px;
-        margin-top: 1rem;
-        
+        font-size: 15px;  
     }
+
     .botonHamburguesa {
-        display: block;
-     }
+        display: block; 
+        margin-top: 1rem;}
 
-    .header__titulo {
-         font-size: 70px;
-     }
+    .header__titulo {font-size: 70px;}
 
-    .tamañoReducidoI {
-        font-size: 30px;
-    }
+    .tamañoReducidoI {font-size: 30px;}
 
-     .caja2index__p {
-         font-size: 80%;
-     }
-    .recorte{
-        overflow: hidden;
-    }
-    .imgSectionCerro {
-        display: block;
-    }
+    .caja2index__p {font-size: 80%;}
+    
+    .recorte{ overflow: hidden;}
+    
+    .imgSectionCerro { display: block;}
+
+    .altura {height: 300px;}
+
     .visitaVirtual {
         margin-left: 2rem;
         height: 400px;
     }
 
-    .cajaContacto {
-        width: 350px;
-    }
+    .cajaContacto {width: 350px;}
   
-    .parrafoInfo{
-        text-align: center;
-    }
+    .parrafoInfo {text-align: center;}
 }
-    @media screen and (max-width: 402px){
-        .icono {
-            margin-top: 2rem;
-        }
-    }
-
-
+    
+@media screen and (max-width: 402px){
+    
+    .icono {margin-top: 2rem;} 
+    .botonHamburguesa {margin-top: 2rem;}  
+}
