--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -7,21 +7,19 @@
 
 .body {
     background-color:bisque;
-    font-family: 'Quicksand', sans-serif; 
+    font-family: 'Quicksand', sans-serif;
+    max-width: 1250px;
+    margin: 0 auto; 
 }
 
 ul { list-style-type: none; }
 
 .header {
-    height: 200%;
-    width: 98vw;
     box-shadow: 5px 8px 11px;
     padding: 1rem;
     border-color: rgba(21, 65, 49, 0.548);
     background-color: rgb(51, 88, 70);
-    margin-left:0.5rem;
     margin-bottom: 1rem;
-    margin-top: 1rem;
 }
 
 .header__contenedor {
@@ -30,6 +28,14 @@ ul { list-style-type: none; }
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+}
+
+/* revisar*/
+
+.margenDerecho {
+    position: absolute;
+    margin-top: 0%;
 }
 
 .h1 {
@@ -93,17 +99,18 @@ ul { list-style-type: none; }
 }
 .oculto {display: none;}
 
+ul {margin-bottom: 0rem;}
+
 #bannerinicio {
-    width: 100vw;
-    height: 50vw;
-    padding-top: 1rem;
+    width: 95vw;
+    height: 45vw;
+    padding-top: 0.5rem;
     border-radius: 15%;
     margin-bottom: 1rem;
 }
 
 .caja2index__p {
     font-weight: bold;
-    font-size: 130%;
     line-height: 1.5;
     text-align: center;
     color: bisque;
@@ -113,25 +120,23 @@ ul { list-style-type: none; }
 }
 
 .caja3index {
-    width: 98vw;    
-    height: 400px;
-    margin-top: 1rem;
-    margin-left: 0.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
     border: solid 3px rgba(21, 65, 49, 0.548);
     padding: 1rem;
-    overflow: hidden;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100%;
     grid-column-gap: 1rem;
-    align-items: stretch;
-    justify-items:stretch ;
 }
 
 .caja3index__img{
     width: 100%;
-    height: 100%;
+    height: 25rem;
+    overflow: hidden;
+    object-fit: cover;   
 }
+
 
 .footer {
     display: flex;
@@ -146,15 +151,47 @@ ul { list-style-type: none; }
     padding: 1rem;
 }
 
+.footer{
+    height: 120px;
+    box-shadow: 5px 8px 11px;
+    padding: 1rem;
+    border-color: rgba(21, 65, 49, 0.548);
+    background-color: rgb(51, 88, 70);
+    margin-top: 0.5rem;
+}
+
+.footer__contenedor { 
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .footer__p {
     font-size: 20px;
     color: bisque;
+    margin-bottom: 0%;
 }
 
 .footer__lista {
     display: flex; 
-    gap: 4rem;
-    align-items: center;
+    gap: 3rem;
+}
+
+.tamañoReducidoI {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.iframeIndexContenedor {
+    height: 30rem;
+    margin: 0% auto;
+}
+
+.iframeIndex { 
+    height: 100%;
+    width: 100%;
 }
 
 /* Segunda página - Nosotros*/
@@ -237,7 +274,7 @@ ul { list-style-type: none; }
     display: grid;
     grid-template-columns: 410px 410px 410px ;
     grid-template-rows: 430px 430px;
-    grid-gap: 2rem;
+    grid-gap: 1.3rem;
 }
 
 .tarjeta {
@@ -378,9 +415,9 @@ ul { list-style-type: none; }
 
 @media screen and (max-width: 1024px){
 
-    body {height: auto;}
+    .body {height: auto;}
     
-    header {
+    .header {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -395,15 +432,19 @@ ul { list-style-type: none; }
         margin-bottom: 0.5rem;
     }
 
-    .nav__lista {
-        margin-top: 1rem;
-    }
+    .nav__lista {margin-top: 1rem;}
 
     .caja3index {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
-        grid-row-gap: 2rem;
+        grid-row-gap: 1rem;
         height: 100%;
+    }
+
+    .iframeIndexContenedor {
+        height: 25rem;
+        width: 35rem;
+        margin: 0% auto;
     }
 
     .iframeIndex { height: 100%;}
@@ -417,6 +458,12 @@ ul { list-style-type: none; }
         margin-top: 1rem;
     }
 
+    .footer__contenedor {
+        flex-direction: column;
+        margin-top: 1rem;
+    }
+    .tamañoReducidoI{font-size: 32px;}
+
     .cajaNosotros {
     width: 98%;
     height: 100%;
@@ -428,7 +475,6 @@ ul { list-style-type: none; }
     .origen {
         display: flex;
         flex-direction: column;
-       
     }
 
     .imgCajaNosotros {
@@ -459,6 +505,7 @@ ul { list-style-type: none; }
         flex-wrap: wrap;
         justify-content: center;
         align-content: center;
+        gap: 0rem;
     }
     
     .tarjeta { width: 350px;}
@@ -543,10 +590,18 @@ ul { list-style-type: none; }
 
     .header__titulo {font-size: 70px;}
 
-    .tamañoReducidoI {font-size: 30px;}
+    .tamañoReducidoI {font-size: 25px;}
+    
+    .bloqueactividades {margin-left: 0.5rem;}
 
     .caja2index__p {font-size: 80%;}
+
+    .caja3index__img { height: 18rem;}
     
+    .iframeIndexContenedor { 
+        width: 25rem;
+        height: 15rem;}
+        
     .recorte{ overflow: hidden;}
     
     .imgSectionCerro { display: block;}
@@ -561,10 +616,29 @@ ul { list-style-type: none; }
     .cajaContacto {width: 350px;}
   
     .parrafoInfo {text-align: center;}
+
+    .footer__p {font-size: 15px;}
+}
+    
+@media screen and (max-width: 770px) {
+    .iframeIndexContenedor{
+        width: 30rem;
+    }
+}
+
+@media screen and (max-width: 570px){
+    .iframeIndexContenedor {
+        width: 24rem;
+    }
 }
     
 @media screen and (max-width: 402px){
-    
+
+    #bannerinicio {height:15rem;}
+    .caja3index__img {height: 15rem;}
     .icono {margin-top: 2rem;} 
     .botonHamburguesa {margin-top: 2rem;}  
+    .iframeIndexContenedor {
+        width: 17rem;
+        height: 15rem;}
 }
