--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -198,11 +198,11 @@ ul {margin-bottom: 0rem;}
 /* Segunda página - Nosotros*/
 
 .cajaNosotros {
+    margin: 0% auto;
     margin-top: 2rem;
-    margin-left: 4rem;
     margin-bottom: 2rem;
     padding-top: 1.5rem;
-    width: 90vw;
+    width: 95%;
     height: 1500px;
     display: grid;
     grid-template-columns: 1fr 1fr;
