--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -111,6 +111,7 @@ ul {margin-bottom: 0rem;}
 
 .caja2index__p {
     font-weight: bold;
+    font-size: 20px;
     line-height: 1.5;
     text-align: center;
     color: bisque;
@@ -208,12 +209,10 @@ ul {margin-bottom: 0rem;}
     object-fit: cover;
 }
 .imgCajaNosotros {
-    height: 360px;
-    padding-right: 3rem;
-    padding-left: 2rem;
-    margin-top: 1.8rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    margin-left: 5%;
 }
-
 .parrafoCajaNosotros {
     font-family: 'Quicksand', sans-serif;
     text-align: center;
@@ -346,6 +345,9 @@ ul {margin-bottom: 0rem;}
     font-weight: bolder;
 }
 
+.cajaImgCerro2 {
+padding: 1rem;
+}
 .cerro__p {padding-right: 1rem;}
 
 .margenAbajo {margin-bottom: 1.5rem;}
