--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -184,10 +184,15 @@ ul {margin-bottom: 0rem;}
 
 /* Segunda página - Nosotros*/
 
-
-.sinMargin {
+.cajaNosotros {
+    width: 98%;
+    height: 100%;
     margin: 0 auto;
-}
+    display: flex;
+    flex-direction: column;    
+    }
+
+.sinMargin {margin: 0 auto;}
 
 .nosotros__img {
     width: 100%;
@@ -248,6 +253,14 @@ ul {margin-bottom: 0rem;}
 
 /* Tercera página - Actividades */
 
+.bloqueactividades{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    gap: 0.5rem;
+}
+
 .subtituloCentrado{ 
     color: rgb(12,71,36);
     font-weight: bolder;
@@ -256,6 +269,48 @@ ul {margin-bottom: 0rem;}
     font-size: 220%;
     font-family: 'Oooh Baby';
 }
+
+.cajaNosotros {
+    margin: 0% auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding-top: 1.5rem;
+    width: 95%;
+    height: 1500px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas: 
+    "origen origen"
+    "valores valores"
+    "recomendaciones recomendaciones";
+    grid-row-gap: 3rem;
+    overflow: hidden;
+}
+
+
+
+.origen {
+grid-area: origen; background-color: rgba(21, 65, 49, 0.548);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.valores {
+grid-area: valores; background-color:  rgba(51, 88, 70, 0.747);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.recomendaciones {
+grid-area: recomendaciones ; background-color: rgba(21, 65, 49, 0.548);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
 
 .tarjeta {
     width: 400px;
