--- a/scss/parciales/_mediaquerys.scss
+++ b/scss/parciales/_mediaquerys.scss
@@ -2,6 +2,44 @@
 
 /* Tablet*/
 
+@media screen and (max-width: 1200px) {
+
+    .nosotros__img {
+        width: 600px ;
+        height: 400px;
+        object-fit: cover;
+        margin-bottom: 2rem;
+    }
+    
+    .imgCajaNosotros {
+        text-align: center;
+    }
+
+    .tamañoLetra {
+        margin-left: 0%;
+    }
+
+    .sinmarginB {
+        margin-bottom: 0;
+    }
+
+    .mapa {height: 450px;}
+
+    .visitaVirtual {
+        height: 500px;
+    }
+    .caja__imgOrigen {
+        width:100%;
+        height: 100%;
+    }
+
+    .caja__imgPlanes {
+        width: 500px;
+        height: 100%;
+        margin-left: 0;
+    }
+}
+
 @media screen and (max-width: 1024px){
 
     .body {height: auto;}
@@ -51,9 +89,7 @@
         margin-top: 1rem;
     }
     .tamañoReducidoI{font-size: 32px;}
-
-    /* Nueva parte bs en nos 1024*/
-   
+ 
     .tamañoLetra {
         margin-left: 0%;
     }
@@ -61,9 +97,7 @@
         width: 35rem;
         justify-content: center;
     }
-    .parrafoCajaNosotros {
-        height: 17rem;    
-    }
+   
     .nosotros__img {
         width: auto;
     }
@@ -96,7 +130,6 @@
 
     .altura {height: 400px;}
 
-    .visitaVirtual { margin-left: 2.5rem;}
     
     .cajaContacto {width: 400px;}
 
@@ -106,17 +139,24 @@
    
     .mapa {
         width: 100%;
-        height: 22rem;
         margin-top: 0%;
         margin-left: 0%;
     }
 
-    .parrafoInfo {font-size: 80%;}
+    .parrafoInfo {font-size: 18px; font-weight: 400;}
 }
 
 @media screen and (max-width: 992px){
 
     .mt__tarjeta {margin-top: 1rem;}
+    .row {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+     
+    .visitaVirtual { height: 400px;}
+    .col-6 { width: 100%;}
 
 }
 
@@ -173,15 +213,17 @@
     .altura {height: 300px;}
 
     .visitaVirtual {
-        margin-left: 2rem;
-        height: 400px;
+        height: 300px;
     }
 
-    .cajaContacto {width: 350px;}
+    .cajaContacto {width: 350px; margin-top: 1rem;}
   
     .parrafoInfo {text-align: center;}
 
     .footer__p {font-size: 15px;}
+    .parrafoInfo {
+        font-size: 15px;
+    }
 }
     
 @media screen and (max-width: 770px) {
@@ -189,7 +231,10 @@
 }
 
 @media screen and (max-width: 570px){
- 
+ .mapa {
+     height:350px ;
+ }
+
 }
     
 @media screen and (max-width: 402px){
@@ -201,6 +246,10 @@
     .iframeIndexContenedor {height: 15rem;}
     .tarjeta__img {padding: 0.3rem;}
     .footer { margin-left: 0.2rem;}
+    .cajaContacto { width: 300px;}
+    .visitaVirtual {
+        margin-bottom: 1rem;
+    }
 }
 
 @media screen and (max-width: 323px){
@@ -208,4 +257,7 @@
     .footer__p { font-size: 12px;}
     .tamañoReducidoI {font-size: 20px;}
     .iframeIndex {width: auto;}
+    .margenAbajo { margin-bottom: 1rem;}
+
+    
 }
