--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -42,7 +42,8 @@ ul {
   color: bisque; }
 
 .color {
-  background-color: rgba(51, 88, 70, 0.747); }
+  background-color: rgba(51, 88, 70, 0.747);
+  justify-content: center; }
 
 .sinPadding {
   padding: 0%; }
@@ -217,10 +218,10 @@ ul {
   width: 100%;
   height: 100%; }
 
-.caja_imgRecomendaciones {
+.caja__imgRecomendaciones {
   width: 490px;
   height: 320px;
-  margin-top: 2.5rem; }
+  margin-top: 3rem; }
 
 .imgRecomendaciones {
   width: 100%; }
@@ -231,7 +232,9 @@ ul {
   line-height: 2;
   text-align: center;
   color: bisque;
-  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 0.4rem;
   font-weight: bold;
   margin-bottom: 0rem; }
 
@@ -498,7 +501,7 @@ ul {
 
 /* Media Querys*/
 /* Tablet*/
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1201px) {
   .nosotros__img {
     width: 600px;
     height: 400px;
@@ -516,11 +519,21 @@ ul {
     height: 500px; }
   .caja__imgOrigen {
     width: 100%;
-    height: 100%; }
-  .caja__imgPlanes {
-    width: 500px;
     height: 100%;
-    margin-left: 0; } }
+    margin-top: 0rem; }
+  .caja__imgPlanes {
+    width: 550px;
+    height: 100%;
+    margin: 0 auto; }
+  .imgPlanes {
+    margin-top: 1.5rem;
+    margin-left: -4rem; }
+  .caja__imgOrigen {
+    margin-right: auto; }
+  .alturaPisada {
+    width: auto; }
+  .parrafoCajaNosotros {
+    margin-top: 1rem; } }
 
 @media screen and (max-width: 1024px) {
   .body {
@@ -565,8 +578,6 @@ ul {
   .cajaImgNosotros {
     width: 35rem;
     justify-content: center; }
-  .nosotros__img {
-    width: auto; }
   .bloqueactividades {
     display: flex;
     flex-wrap: wrap;
@@ -602,19 +613,30 @@ ul {
     margin-left: 0%; }
   .parrafoInfo {
     font-size: 18px;
-    font-weight: 400; } }
+    font-weight: 400; }
+  .caja__imgRecomendaciones {
+    margin-top: 0rem; } }
 
 @media screen and (max-width: 992px) {
   .mt__tarjeta {
     margin-top: 1rem; }
-  .row {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
   .visitaVirtual {
     height: 400px; }
   .col-6 {
     width: 100%; } }
+
+@media screen and (max-width: 768px) {
+  .caja__imgPlanes {
+    width: 80%;
+    height: 100%;
+    margin-left: 2.3rem; }
+  .imgPlanes {
+    width: 100%;
+    height: 100%;
+    margin-right: 0%;
+    margin-left: 2rem; }
+  .offset-1 {
+    margin-left: auto; } }
 
 /*Mobile*/
 @media screen and (max-width: 600px) {
@@ -674,7 +696,13 @@ ul {
 
 @media screen and (max-width: 570px) {
   .mapa {
-    height: 350px; } }
+    height: 350px; }
+  .caja__imgPlanes {
+    margin-left: 1.8rem;
+    margin-bottom: 2rem; }
+  .caja__imgRecomendaciones {
+    height: auto;
+    padding-bottom: 1rem; } }
 
 @media screen and (max-width: 402px) {
   #bannerinicio {
@@ -694,7 +722,18 @@ ul {
   .cajaContacto {
     width: 300px; }
   .visitaVirtual {
-    margin-bottom: 1rem; } }
+    margin-bottom: 1rem; }
+  .imgPlanes {
+    width: 100%;
+    height: 100%;
+    margin-right: 0%;
+    margin-left: 0rem; }
+  .caja__imgPlanes {
+    margin-left: 1.5rem; }
+  .parrafoCajaNosotros {
+    font-size: 90%; }
+  .parrafoLlegar {
+    font-size: 0.9rem; } }
 
 @media screen and (max-width: 323px) {
   .footer__p {
