--- a/scss/parciales/_bases.scss
+++ b/scss/parciales/_bases.scss
@@ -44,7 +44,8 @@ ul { list-style-type: none; }
 
 .enlaceParrafo {color: $colorclaro;}
 
-.color {background-color: $coloroscuro51;}
+.color {background-color: $coloroscuro51;
+justify-content: center;}
 
 .sinPadding {
     padding: 0%;
