--- a/scss/parciales/_mediaquerys.scss
+++ b/scss/parciales/_mediaquerys.scss
@@ -2,7 +2,7 @@
 
 /* Tablet*/
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1201px) {
 
     .nosotros__img {
         width: 600px ;
@@ -31,13 +31,33 @@
     .caja__imgOrigen {
         width:100%;
         height: 100%;
+        margin-top: 0rem;
     }
 
     .caja__imgPlanes {
-        width: 500px;
+        width: 550px;
         height: 100%;
-        margin-left: 0;
+        margin: 0 auto;
+        
     }
+
+    .imgPlanes {
+        margin-top: 1.5rem;
+        margin-left: -4rem;
+    }
+
+    .caja__imgOrigen {
+        margin-right: auto;
+    }
+    
+    .alturaPisada {
+        width: auto;
+    }
+    .parrafoCajaNosotros {
+        margin-top: 1rem;
+    }
+
+    
 }
 
 @media screen and (max-width: 1024px){
@@ -98,9 +118,7 @@
         justify-content: center;
     }
    
-    .nosotros__img {
-        width: auto;
-    }
+    
     .bloqueactividades{
         display: flex;
         flex-wrap: wrap;
@@ -144,20 +162,37 @@
     }
 
     .parrafoInfo {font-size: 18px; font-weight: 400;}
+
+    .caja__imgRecomendaciones {margin-top: 0rem;}
+      
+    
 }
 
 @media screen and (max-width: 992px){
 
     .mt__tarjeta {margin-top: 1rem;}
-    .row {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-     
     .visitaVirtual { height: 400px;}
     .col-6 { width: 100%;}
 
+}
+
+@media screen and (max-width: 768px) {
+    .caja__imgPlanes {
+        width: 80% ;
+        height: 100%;
+        margin-left: 2.3rem;
+        
+    }
+    
+    .imgPlanes{
+        width: 100%;
+        height: 100%;
+        margin-right:0%;
+        margin-left: 2rem;
+    }
+
+    .offset-1 {margin-left: auto;}
+ 
 }
 
 /*Mobile*/
@@ -234,8 +269,19 @@
  .mapa {
      height:350px ;
  }
-
+ .caja__imgPlanes {
+ 
+    margin-left: 1.8rem;
+    margin-bottom: 2rem;
+   
 }
+
+.caja__imgRecomendaciones {
+    height: auto;
+    padding-bottom: 1rem;}
+}
+
+
     
 @media screen and (max-width: 402px){
 
@@ -250,6 +296,24 @@
     .visitaVirtual {
         margin-bottom: 1rem;
     }
+    .imgPlanes{
+        width: 100%;
+        height: 100%;
+        margin-right:0%;
+        margin-left: 0rem;
+    }
+    .caja__imgPlanes {
+ 
+        margin-left: 1.5rem;
+       
+    }
+    .parrafoCajaNosotros {
+        font-size:90%;
+    }
+
+.parrafoLlegar{
+    font-size: 0.9rem;
+}    
 }
 
 @media screen and (max-width: 323px){
