--- a/scss/parciales/_bases.scss
+++ b/scss/parciales/_bases.scss
@@ -19,8 +19,7 @@
     background-color:$colorclaro;
     font-family: 'Quicksand', sans-serif;
     max-width: 1250px;
-    margin: 0% auto; 
-}
+    margin: 0% auto; }
 
 ul { list-style-type: none; }
 
@@ -32,31 +31,24 @@ ul { list-style-type: none; }
     display: inline-block;
     padding-bottom: 8px;
     font-weight: bold;
-    margin-bottom: 0%;
-}
+    margin-bottom: 0%;}
 
 .h2{
     color: $colorclaro;
     font-size: 30px;
     font-family: 'Oooh Baby';
-    font-weight: bold;
-}
+    font-weight: bold;}
 
 .enlaceParrafo {color: $colorclaro;}
 
 .color {background-color: $coloroscuro51;
 justify-content: center;}
 
-.sinPadding {
-    padding: 0%;
-}
+.sinPadding {padding: 0%;}
 
-.sinPL {
-    padding-left: 0%;
-}
-.paddingB {
-    padding-bottom: 1rem;
-}
+.sinPL {padding-left: 0%;}
+
+.paddingB {padding:map-get($espaciados,4);}
 
 .sinMargin {margin: 0 auto;}
 
@@ -76,7 +68,7 @@ justify-content: center;}
     background-color: rgb(26, 68, 37);
     font-size: large;
     margin: 1rem;
-    padding: 0.2rem;
+    padding:map-get($espaciados,1);
 }
 
 .tituloClaro {color: $colorclaro;}
@@ -87,5 +79,9 @@ justify-content: center;}
     text-align: center;
     text-decoration:underline;
     font-size: 220%;
-    font-family: 'Oooh Baby';
-}
+    font-family: 'Oooh Baby';}
+
+strong {
+    text-decoration: underline;
+    font-style: oblique;
+    font-weight: 900;}
