--- a/scss/parciales/_componentes.scss
+++ b/scss/parciales/_componentes.scss
@@ -8,11 +8,10 @@
 
 .caja2index__p {
     font-weight: bold;
-    font-size: 20px;
     line-height: 1.5;
     text-align: center;
     color: $colorclaro;
-    padding: 1rem;
+    padding:map-get($espaciados,4);
     background: rgb(12,71,36);
     background: radial-gradient(circle, rgba(12,71,36,1) 0%, rgba(79,91,24,1) 35%, rgba(2,54,32,1) 100%);
 }
@@ -129,10 +128,8 @@
 /* Tercera página - Actividades */
 
 .bloqueactividades{
-    display: flex;
+    @include cajaflex (center, center);
     flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
     gap: 0.5rem;
 }
 
@@ -156,9 +153,7 @@
 
 .origen {
 grid-area: origen; background-color: $coloroscuro21;
-display: flex;
-align-items: center;
-justify-content: center;
+@include cajaflex (center, center);
 }
 
 .valores {
@@ -170,22 +165,21 @@ justify-content: center;
 
 .recomendaciones {
 grid-area: recomendaciones ; background-color: $coloroscuro21;
-display: flex;
-align-items: center;
-justify-content: center;
+@include cajaflex (center, center);
+
 }
 
 .tarjeta {
     width: 400px;
     height: 420px;
     margin-top: 1rem;
+    background-color: bisque;
     border:$coloroscuro21 solid 5px;
     border-radius: 15px;
     overflow:hidden;
-    display: flex;
+    @include cajaflex (center, stretch);
     flex-direction: column;
     padding: 0.5rem;
-    align-items: center;
 
     &:hover {
         transform: scale(1.2,1.2);
@@ -252,9 +246,8 @@ justify-content: center;
 
 .cajaIframe {
     padding: 1rem;
-    display: flex;
+    @include cajaflex (center, stretch);
     flex-direction: column;
-    align-items: center;
 }
 
 .cajaVisitaVirtual {
@@ -280,56 +273,49 @@ justify-content: center;
     margin-bottom: 2rem;
     padding: 1rem;
     background-color: $coloroscuro21;
-    padding-bottom: 1rem;
-}
+    padding-bottom: 1rem;}
 
 .sinNegrita {
     font-weight:500 ;
     text-decoration: none;
-    font-size: 200%;
-}
+    font-size: 200%;}
 
 .formulario {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    @include cajaflex (center, flex-start);
     margin: 0.5rem;
-    line-height: 1.5;
-}
+    line-height: 1.5;}
 
 .mapa {
     width: 100%;
-    height: 350px;
-}
+    height: 350px;}
 
 .parrafoLlegar {
     color: $colorclaro;
     font-weight: bolder;
     font-size: 1.1rem;
     background-color: $coloroscuro21;
-    border: 3px $coloroscuro51 solid;
-}
+    border: 3px $coloroscuro51 solid;}
 
 .nosotros__cajaImg { text-align: center; } 
 
 .nosotros__Img { 
     max-width: 1000px; 
-    max-height: 700px; 
-} 
+    max-height: 700px;} 
 
 .acordion__h2{ 
     background-color:rgba(51, 88, 70, 0.747) ; 
-    font-size: 17px; 
+    font-size: 1.3rem; 
     color: bisque; 
-    font-weight: bolder; 
-    
-} 
+    font-weight: bolder; } 
 
 .acordion__p { 
-    font-size: 1rem; 
-    font-weight: lighter; 
-    color: bisque; 
-} 
+    font-size: 1.1rem; 
+    font-weight: 400; 
+    color: bisque; } 
+
+.acordion__strong {
+    font-size: 1.3;
+    font-weight: bold;}
 
 .accordion-button:not(.collapsed) {
         background-color: rgba(51, 88, 70, 0.747); 
@@ -337,14 +323,13 @@ justify-content: center;
         text-align: center; 
         border: 2px rgb(12,71,36) solid;}
 
-.acordion__caja { background-color: rgba(21, 65, 49, 0.548); } 
+.acordion__caja { background-color: rgba(21, 65, 49, 0.87); } 
 
 .acordion__encabezado {background-color: rgba(51, 88, 70, 0.747);} 
 
 .accordion-item {border: 0.3px solid rgba(51, 88, 70, 0.747);} 
 
-.card { 
-    background-color:rgba(51, 88, 70, 0.747);
+.card { background-color:rgba(51, 88, 70, 0.747);
               
     &__cajaP { 
         background-color: rgba(51, 88, 70, 0.747); 
