--- a/scss/parciales/_mediaquerys.scss
+++ b/scss/parciales/_mediaquerys.scss
@@ -8,56 +8,31 @@
         width: 600px ;
         height: 400px;
         object-fit: cover;
-        margin-bottom: 2rem;
-    }
-    
-    .imgCajaNosotros {
-        text-align: center;
-    }
+        margin-bottom: 2rem;}
 
-    .tamañoLetra {
-        margin-left: 0%;
-    }
-
-    .sinmarginB {
-        margin-bottom: 0;
-    }
-
+    .imgCajaNosotros {text-align: center;}
+    .tamañoLetra {margin-left: 0%;}
+    .sinmarginB {margin-bottom: 0;}
     .mapa {height: 450px;}
+    .visitaVirtual {height: 500px;}
 
-    .visitaVirtual {
-        height: 500px;
-    }
     .caja__imgOrigen {
         width:100%;
         height: 100%;
-        margin-top: 0rem;
-    }
+        margin-top: 0rem;}
 
-    .caja__imgPlanes {
+    .caja__imgPlanes{
         width: 550px;
         height: 100%;
-        margin: 0 auto;
-        
-    }
+        margin: 0 auto;}
 
     .imgPlanes {
         margin-top: 1.5rem;
-        margin-left: -4rem;
-    }
+        margin-left: -4rem;}
 
-    .caja__imgOrigen {
-        margin-right: auto;
-    }
-    
-    .alturaPisada {
-        width: auto;
-    }
-    .parrafoCajaNosotros {
-        margin-top: 1rem;
-    }
-
-    
+    .caja__imgOrigen {margin-right: auto;}
+    .alturaPisada {width: auto;}
+    .parrafoCajaNosotros {margin-top: 1rem;}
 }
 
 @media screen and (max-width: 1024px){
@@ -69,16 +44,15 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-    
-    .header__contenedor {flex-direction: column;}
-    
-    .header__titulo{
-        text-align: center;
-        line-height: 40px;
-        margin-bottom: 0.5rem;
-    }
 
+        &__contenedor {flex-direction: column;}
+    
+        &__titulo{
+            text-align: center;
+            line-height: 40px;
+            margin-bottom: 0.5rem;}
+    }
+    
     .nav__lista {margin-top: 1rem;}
 
     .caja3index {
@@ -88,44 +62,36 @@
         height: 100%;
     }
 
-    .iframeIndexContenedor {
+    .iframeIndexContenedor{
         height: 25rem;
-        margin: 0% auto;
-    }
+        margin: 0% auto;}
 
     .iframeIndex { height: 100%;}
     
-    .footer { flex-direction: column-reverse;}
+    .footer { flex-direction: column-reverse;
     
-    .footer__p { font-size: 15px;}
+        &__p { font-size: 15px;}
     
-    .footer__lista {
+        &__lista {
         margin-bottom: 1.5rem;
-        margin-top: 1rem;
-    }
+        margin-top: 1rem;}
 
-    .footer__contenedor {
+        &__contenedor {
         flex-direction: column;
-        margin-top: 1rem;
+        margin-top: 1rem;}
     }
     .tamañoReducidoI{font-size: 32px;}
- 
-    .tamañoLetra {
-        margin-left: 0%;
-    }
+    .tamañoLetra {margin-left: 0%;}
     .cajaImgNosotros {
         width: 35rem;
-        justify-content: center;
-    }
+        justify-content: center;}
    
-    
     .bloqueactividades{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-content: center;
-        gap: 2rem;
-    }
+        gap: 2rem;}
     
     .tarjeta { width: 350px;}
     
@@ -133,39 +99,26 @@
         height: 100%;
         margin: 0% auto;
         margin-bottom: 2rem;
-        margin-top: 1rem;    
-    } 
+        margin-top: 1rem; } 
 
     .cerrosection {
         display: flex;
         flex-direction: column;
         height: 100%;
         margin: auto;
-        margin-bottom: 2rem;
-    }
+        margin-bottom: 2rem;}
 
     .imgSectionCerro { overflow: hidden;}
-
     .altura {height: 400px;}
-
-    
     .cajaContacto {width: 400px;}
-
     .cajaContacto2 {flex-direction: column;}
-    
     .tituloTablet { margin-bottom: 1rem;}
-   
     .mapa {
         width: 100%;
         margin-top: 0%;
-        margin-left: 0%;
-    }
-
+        margin-left: 0%;}
     .parrafoInfo {font-size: 18px; font-weight: 400;}
-
     .caja__imgRecomendaciones {margin-top: 0rem;}
-      
-    
 }
 
 @media screen and (max-width: 992px){
@@ -173,26 +126,21 @@
     .mt__tarjeta {margin-top: 1rem;}
     .visitaVirtual { height: 400px;}
     .col-6 { width: 100%;}
-
 }
 
 @media screen and (max-width: 768px) {
     .caja__imgPlanes {
         width: 80% ;
         height: 100%;
-        margin-left: 2.3rem;
-        
-    }
+        margin-left: 2.3rem;}
     
     .imgPlanes{
         width: 100%;
         height: 100%;
         margin-right:0%;
-        margin-left: 2rem;
-    }
+        margin-left: 2rem;}
 
     .offset-1 {margin-left: auto;}
- 
 }
 
 /*Mobile*/
@@ -212,53 +160,33 @@
         z-index: 100;
         flex-direction: column;
         justify-content: center;
-        text-align: center;
-    }
+        text-align: center;}
     
     #menuLista:target {transform: translateX(0);}
-    
     .oculto { display: inline-block;}
 
     .icono{
         color: $colorclaro;
-        font-size: 15px;  
-    }
+        font-size: 15px; }
 
     .botonHamburguesa {
         display: block; 
         margin-top: 1rem;}
 
     .header__titulo {font-size: 70px;}
-
     .tamañoReducidoI {font-size: 25px;}
-    
     .bloqueactividades {gap: 0.5rem;}
-
     .caja2index__p {font-size: 80%;}
-
     .caja3index__img { height: 18rem;}
-    
-    .iframeIndexContenedor { 
-        height: 15rem;}
-        
-    .recorte{ overflow: hidden;}
-    
+    .iframeIndexContenedor {height: 15rem;}
+    .recorte{overflow: hidden;}
     .imgSectionCerro { display: block;}
-
     .altura {height: 300px;}
-
-    .visitaVirtual {
-        height: 300px;
-    }
-
+    .visitaVirtual {height: 300px;}
     .cajaContacto {width: 350px; margin-top: 1rem;}
-  
     .parrafoInfo {text-align: center;}
-
     .footer__p {font-size: 15px;}
-    .parrafoInfo {
-        font-size: 15px;
-    }
+    .parrafoInfo {font-size: 15px;}
 }
     
 @media screen and (max-width: 770px) {
@@ -266,23 +194,17 @@
 }
 
 @media screen and (max-width: 570px){
- .mapa {
-     height:350px ;
- }
+ .mapa {height:350px ;}
+
  .caja__imgPlanes {
- 
     margin-left: 1.8rem;
-    margin-bottom: 2rem;
-   
-}
+    margin-bottom: 2rem;}
 
 .caja__imgRecomendaciones {
     height: auto;
     padding-bottom: 1rem;}
 }
 
-
-    
 @media screen and (max-width: 402px){
 
     #bannerinicio {height:15rem;}
@@ -290,30 +212,19 @@
     .icono {margin-top: 2rem;} 
     .botonHamburguesa {margin-top: 2rem;}  
     .iframeIndexContenedor {height: 15rem;}
-    .tarjeta__img {padding: 0.3rem;}
+    .tarjeta__img {padding:map-get($espaciados,1)}
     .footer { margin-left: 0.2rem;}
     .cajaContacto { width: 300px;}
-    .visitaVirtual {
-        margin-bottom: 1rem;
-    }
+    .visitaVirtual {margin-bottom: 1rem;}
     .imgPlanes{
         width: 100%;
         height: 100%;
         margin-right:0%;
         margin-left: 0rem;
     }
-    .caja__imgPlanes {
- 
-        margin-left: 1.5rem;
-       
-    }
-    .parrafoCajaNosotros {
-        font-size:90%;
-    }
-
-.parrafoLlegar{
-    font-size: 0.9rem;
-}    
+    .caja__imgPlanes {margin-left: 1.5rem;}
+    .parrafoCajaNosotros {font-size:90%;}
+    .parrafoLlegar{font-size: 0.9rem;}    
 }
 
 @media screen and (max-width: 323px){
@@ -323,5 +234,4 @@
     .iframeIndex {width: auto;}
     .margenAbajo { margin-bottom: 1rem;}
 
-    
 }
