Margintop en subtitulos pag nosotros

--- a/scss/parciales/_bases.scss
+++ b/scss/parciales/_bases.scss
@@ -59,6 +59,8 @@ justify-content: center;}
 
 .margintop {margin-top: 2rem;}
 
+.marginT {margin-top: 1rem;}
+
 .marginB {margin-bottom: 1rem;}
 
 .margenAbajo {margin-bottom: 1.5rem;}
